--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "VERCEL": "1"
     },
     "functions": {
-      "api/**/*": {
+      "app/api/**/*": {
         "memory": 1024,
         "maxDuration": 10
       }
