--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.1",
     "erp-setup-tool": "file:",
+    "lucide": "^0.456.0",
     "next": "^15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "react": "^19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
