--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.31.0",
+    "@types/papaparse": "^5.3.15",
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.1",
     "erp-setup-tool": "file:",
     "lucide": "^0.456.0",
     "next": "^15.0.2",
+    "papaparse": "^5.5.1",
     "react": "^19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
